@@ -1,3 +1,9 @@
+2008-11-11  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	PR rtl-optimization/37363
+	* simplify-rtx.c (simplify_plus_minus): Don't create (const (minus ...))
+	expresisons.
+
 2008-11-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* ira-lives.c (process_bb_node_lives): Restore EH_RETURN_DATA_REGNO
